# to-do-App-FastAPI

./: README.md  pyproject.toml
to-do-App-FastAPI/: database.py  dependencies.py  main.py  models.py  schemas.py
to_do_App_FastAPI/: database.py  main.py  userSchemas.py
to_do_App_FastAPI/api/: items.py  users.py
to_do_App_FastAPI/models/: __init__.py  models.py  userModels.py
