[tool.poetry]
name = "to-do-App-FastAPI"
version = "0.1.0"
description = ""
authors = ["hamzatariqcs3 <hamzatariqcs3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.32"
mysql-connector-python = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
